Updated star animation.

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Grand Ephemeris is a music collective from Austin, TX. Led by brothers Jason and Joel Harrison, they explore the notions of Man vs Creator/Human vs Nature/Want vs Need through their Americana-tinged telescope accompanied by slide guitar, banjo, keys and raucous rhythms while always keeping two eyes upward and one eye inward.">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>+ Grand Ephemeris +</title>
   </head>
