--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:description" name="description" content="Grand Ephemeris is a music collective from Austin, TX. Led by brothers Jason and Joel Harrison, they explore the notions of Man vs Creator/Human vs Nature/Want vs Need through their Americana-tinged telescope accompanied by slide guitar, banjo, keys and raucous rhythms while always keeping two eyes upward and one eye inward.">
-    <meta property="og:image" content="%PUBLIC_URL%/ui.png">
+    <meta property="og:image" content="https://gdurl.com/cwSW">
     <meta property="og:title" content="+ Grand Ephemeris - Music Collective from Austin, TX +">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="twitter:card" content="summary_large_image">
