--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,17 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta property="og:description" name="description" content="Grand Ephemeris is a music collective from Austin, TX. Led by brothers Jason and Joel Harrison, they explore the notions of Man vs Creator/Human vs Nature/Want vs Need through their Americana-tinged telescope accompanied by slide guitar, banjo, keys and raucous rhythms while always keeping two eyes upward and one eye inward.">
-    <meta property="og:image" content="https://gdurl.com/cwSW">
-    <meta property="og:title" content="+ Grand Ephemeris - Music Collective from Austin, TX +">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!--  META Tags -->
+
+    <meta property="og:title" content="+ Grand Ephemeris - Music Collective from Austin, TX +">
+    <meta property="og:description" content="Grand Ephemeris is a music collective from Austin, TX. Led by brothers Jason and Joel Harrison, they explore the notions of Man vs Creator/Human vs Nature/Want vs Need through their Americana-tinged telescope accompanied by slide guitar, banjo, keys and raucous rhythms while always keeping two eyes upward and one eye inward.">
+    <meta property="og:image" content="https://gdurl.com/cwSW">
+    <meta property="og:url" content="https://www.grandephemeris.com/">
     <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:site_name" content="+ Grand Ephemeris - Music Collective from Austin, TX +">
+
     <title>+ Grand Ephemeris +</title>
   </head>
   <body>
