Meta img update.

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <meta property="og:title" content="+ Grand Ephemeris - Music Collective from Austin, TX +">
     <meta property="og:description" content="Grand Ephemeris is a music collective from Austin, TX. Led by brothers Jason and Joel Harrison, they explore the notions of Man vs Creator/Human vs Nature/Want vs Need through their Americana-tinged telescope accompanied by slide guitar, banjo, keys and raucous rhythms while always keeping two eyes upward and one eye inward.">
-    <meta property="og:image" content="https://gdurl.com/cwSW">
+    <meta property="og:image" content="https://gdurl.com/r7SD">
     <meta property="og:url" content="https://www.grandephemeris.com/">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="+ Grand Ephemeris - Music Collective from Austin, TX +">
