--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favi.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <!--  META Tags -->
-
     <meta property="og:title" content="+ Grand Ephemeris - Music Collective from Austin, TX +">
     <meta property="og:description" content="Grand Ephemeris is a music collective from Austin, TX. Led by brothers Jason and Joel Harrison, they explore the notions of Man vs Creator/Human vs Nature/Want vs Need through their Americana-tinged telescope accompanied by slide guitar, banjo, keys and raucous rhythms while always keeping two eyes upward and one eye inward.">
     <meta property="og:image" content="https://gdurl.com/r7SD">
@@ -25,7 +23,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="+ Grand Ephemeris - Music Collective from Austin, TX +">
 
-    <title>+ Grand Ephemeris +</title>
+    <title>+ Grand Ephemeris | Music Collective from Austin, TX +</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
