--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <!--  META Tags -->
     <meta property="og:title" content="+ Grand Ephemeris - Music Collective from Austin, TX +">
     <meta property="og:description" content="Grand Ephemeris is a music collective from Austin, TX. Led by brothers Jason and Joel Harrison, they explore the notions of Man vs Creator/Human vs Nature/Want vs Need through their Americana-tinged telescope accompanied by slide guitar, banjo, keys, electronica and raucous rhythms while always keeping two eyes upward and one eye inward.">
-    <meta property="og:image" content="https://i.ibb.co/8sXy7VM/remeridian-promo-banner.jpg">
+    <meta property="og:image" content="https://i.ibb.co/QJ8YP0R/remeridian-meta-banner.png">
     <meta property="og:url" content="https://www.grandephemeris.com/">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="+ Grand Ephemeris - Music Collective from Austin, TX +">
