site title update

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="+ Grand Ephemeris - Music Collective from Austin, TX +">
 
-    <title>+ Grand Ephemeris | Music Collective from Austin, TX + - New Collection 'Remeridian' Out Now</title>
+    <title>+ Grand Ephemeris | Music Collective from Austin, TX + - Latest 'Remeridian' Out Now</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
