--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--  META Tags -->
-    <meta property="og:title" content="+ Grand Ephemeris - Music Collective from Austin, TX +">
-    <meta property="og:description" content="New Collection 'Equinoxical' OUT NOW - Grand Ephemeris is a music collective from Austin, TX. Led by brothers Jason and Joel Harrison, they explore the notions of Man vs Creator/Human vs Nature/Want vs Need through their Americana-tinged telescope accompanied by slide guitar, banjo, keys, electronica and raucous rhythms while always keeping two eyes upward and one eye inward.">
-    <meta property="og:image" content="https://i.ibb.co/8bM7GCx/equinoxical-meta-header.png">
+    <meta property="og:title" content="+ Grand Ephemeris - Music Collective emanating from Austin, TX +">
+    <meta property="og:description" content="New Collection 'Continuum Swings' Available Everywhere - Grand Ephemeris is a music collective from Austin, TX. Led by brothers Jason and Joel Harrison, they explore the notions of Man vs Creator/Human vs Nature/Want vs Need through their Americana-tinged telescope accompanied by slide guitar, banjo, keys, electronica and raucous rhythms while always keeping two eyes upward and one eye inward.">
+    <meta property="og:image" content="https://i.ibb.co/mJrTyyK/GE-web-preview-img.png">
     <meta property="og:url" content="https://www.grandephemeris.com/">
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:site_name" content="+ Grand Ephemeris - Music Collective from Austin, TX +">
+    <meta property="og:site_name" content="+ Grand Ephemeris - Music Collective emanating from Austin, TX +">
 
-    <title>+ Grand Ephemeris | Music Collective from Austin, TX + - Latest 'Equinoxical' Out Now</title>
+    <title>+ Grand Ephemeris | Music Collective emanating from Austin, TX + - Latest 'Continuum Swings' Available Everywhere</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
