meta description update

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--  META Tags -->
     <meta property="og:title" content="+ Grand Ephemeris - Music Collective emanating from Austin, TX +">
-    <meta property="og:description" content="New Collection 'Continuum Swings' Available Everywhere - Grand Ephemeris is a music collective from Austin, TX. Led by brothers Jason and Joel Harrison, they explore the notions of Man vs Creator/Human vs Nature/Want vs Need through their Americana-tinged telescope accompanied by slide guitar, banjo, keys, electronica and raucous rhythms while always keeping two eyes upward and one eye inward.">
+    <meta property="og:description" content="New Collection 'Continuum Swings' Available Everywhere - Grand Ephemeris is a music collective emanating from Austin, TX. Led by brothers Jason and Joel Harrison, they explore the notions of Man vs Creator/Human vs Nature/Want vs Need through their Americana-tinged telescope accompanied by slide guitar, banjo, keys, electronica and raucous rhythms while always keeping two eyes upward and one eye inward.">
     <meta property="og:image" content="https://i.ibb.co/mJrTyyK/GE-web-preview-img.png">
     <meta property="og:url" content="https://www.grandephemeris.com/">
     <meta name="twitter:card" content="summary_large_image">
