--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,13 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--  META Tags -->
     <meta property="og:title" content="+ Grand Ephemeris - Music Collective emanating from Austin, TX +">
-    <meta property="og:description" content="New Collection 'Continuum Swings' Available Everywhere - Grand Ephemeris is a music collective emanating from Austin, TX. Led by brothers Jason and Joel Harrison, they explore the notions of Man vs Creator/Human vs Nature/Want vs Need through their Americana-tinged telescope accompanied by slide guitar, banjo, keys, electronica and raucous rhythms while always keeping two eyes upward and one eye inward.">
-    <meta property="og:image" content="https://i.ibb.co/mJrTyyK/GE-web-preview-img.png">
+    <meta property="og:description" content="The Great Horrifying God Upon the Mountaintop came down unto us under cover of great horrors and decreed we create a collection of iterations of songs we have released before or played in previous bands. It demanded verily in its terrifying wail, 'The current dynamic of Grand Ephemeris changed these songs in unique ways that are capable of standing on their own and deserving of dedicated recordings.' Who are we to deny The Great Horrifying God? Thusly, 'Surface Recursive' was born unto the World.">
+    <meta property="og:image" content="https://i.ibb.co/b5j6wH4n/site-meta-img.png">
     <meta property="og:url" content="https://www.grandephemeris.com/">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="+ Grand Ephemeris - Music Collective emanating from Austin, TX +">
 
-    <title>+ Grand Ephemeris | Music Collective emanating from Austin, TX + - Latest 'Continuum Swings' Available Everywhere</title>
+    <title>+ Grand Ephemeris + - Latest 'Surface Recursive' Available Everywhere</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
