--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="+ Grand Ephemeris - Music Collective emanating from Austin, TX +">
 
-    <title>+ Grand Ephemeris + - Latest 'Surface Recursive' Available Everywhere</title>
+    <title>+ Grand Ephemeris - Latest 'Surface Recursive' Available Everywhere +</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
